setting dark mode solve

--- a/assets/css/material-dashboard.css
+++ b/assets/css/material-dashboard.css
@@ -20909,7 +20909,7 @@ body:not(.dark-version) .sidenav.bg-transparent .collapse .nav-item .nav-link.ac
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #7b809a;
+  color: rgb(227,49,111);
   padding: 0;
   margin: 0 3px;
   border-radius: 50% !important;
